added a list in the HTML file to demonstrate multi cursor functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>That Was Easy!</title>
 </head>
 <body>
-    
+    <ul>
+        <li style="color: red" class="tab">Home</li>
+        <li style="color: red" class="tab">Services</li>
+        <li style="color: red" class="tab">Contact Us</li>
+        <li class="tab">About</li>
+    </ul>
 </body>
 </html>
